# cssm_project

./: README.md
code/: .gitignore  .gitrepo  Dockerfile  Model.js  Notebook.ipynb  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.mix.js
code/frontend/: Model.js
code/nix/: devshell.nix
code/simulation/: agents.py  metrics.py  model.py  schedule.py  server.py  visualization.py
