[tool.poetry]
name = "complex-social-system-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Mesa = "^1.1.1"
notebook = "^6.5.2"
bokeh = "^3.0.3"
pandas = "^1.5.2"
pyarrow = "^10.0.1"
matplotlib = "^3.6.2"
black = {extras = ["jupyter"], version = "^22.12.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
